# copier-astral

./: .gitignore  LICENSE  Makefile  README.md  copier.yml  extensions.py  mkdocs.yml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: contributing.md  guide.md  index.md  options.md
template/: .gitignore.jinja  CHANGELOG.md.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  hatch.toml.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if include_docker %}Dockerfile{% endif %}.jinja  {% if include_precommit %}.pre-commit-config.yaml{% endif %}.jinja  {% if include_prek %}.pre-commit-config.yaml{% endif %}.jinja  {% if include_renovate %}renovate.json{% endif %}.jinja
template/docs/: contributing.md.jinja  index.md.jinja
template/src/{{project_slug}}/: {% if include_cli %}cli.py{% endif %}.jinja
template/tests/: test_{{project_slug}}.py.jinja
template/{% if include_github_actions %}.github{% endif %}/workflows/: ci.yml.jinja  docs.yml.jinja  release.yml.jinja
tests/: test_extensions.py  test_template.py  utils.py
